# discalendar-next

./: .editorconfig  Makefile.toml
api/: Cargo.toml
api/entity/: Cargo.toml
api/entity/src/entities/: account.rs  guild.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs
api/migration/: Cargo.toml
api/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20231225_154623_add_guild.rs
api/service/: Cargo.toml
api/service/src/: lib.rs
api/service/src/query/: account.rs  guild.rs  mod.rs
api/src/: discord.rs  error.rs  lib.rs  oauth2_client.rs  prelude.rs
api/src/arguments/: mod.rs
api/src/routes/: mod.rs
api/src/routes/auth/: callback.rs  login.rs  logout.rs  mod.rs
api/src/routes/guilds/: list.rs  mod.rs
api/src/routes/users/: me.rs  mod.rs
frontend/: .eslintrc.yml  .prettierrc.yml  app.vue  nuxt.config.ts  package.json
frontend/assets/style/: global.scss
frontend/components/app/: AppHeader.vue  NavDrawer.vue  NavDrawerItem.vue
frontend/components/server/: List.vue
frontend/composables/: useAppTheme.ts  useNavbar.ts
frontend/layouts/: default.vue
frontend/pages/: doc.vue  index.vue  login.vue  logout.vue  test.vue
frontend/pages/doc/: [..slug].vue
frontend/plugins/: vuetify.ts
frontend/stores/: counter.ts  user.ts
frontend/utils/: theme.ts  types.ts
